--- a/Proyecto_Final/Back-end/src/main/resources/application.properties
+++ b/Proyecto_Final/Back-end/src/main/resources/application.properties
@@ -1,9 +1,15 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/back-end?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-#JWT
+#AMBIENTES LOCALES
+#spring.datasource.url=jdbc:mysql://localhost:3306/back-end?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+#AMBIENTES PRODUCCION
+spring.datasource.url=jdbc:mysql://uvdq6qdgawaopug9:K6KKT29D7G4E4ecZ8YIY@bv0gg9kqav1rf6rkcikm-mysql.services.clever-cloud.com:3306/bv0gg9kqav1rf6rkcikm
+spring.datasource.username=uvdq6qdgawaopug9
+spring.datasource.password=K6KKT29D7G4E4ecZ8YIY
+JWT
 jwt.secret = secret
 jwt.expiration = 3600
